py2app 0.4.2
------------

py2app 0.4.2 is a minor feature release

Features:

- A new recipe for `PyQt`_ 4.x. This recipe was donated by Kevin Walzer.

py2app 0.4.0
------------

py2app 0.4.0 is a minor feature release (and was never formally released).

Features:
- Support for CoreData mapping models (introduced in Mac OS X 10.5)
- Support for python packages that are stored in zipfiles (such as ``zip_safe``
  python eggs). 

Bug fixes:
- Fix incorrect symlink target creation with an alias bundle that has included
  frameworks.
- Stuffit tends to extract archives recursively, which results in unzipped
  code archives inside py2app-created bundles. This version has a workaround
  for this "feature" for Stuffit.
- Be more carefull about passing non-constant strings as the template argumenti
  of string formatting functions (in the app and bundle templates), to avoid
  crashes under some conditions.

py2app 0.3.6
------------

py2app 0.3.6 is a minor bugfix release.

Bug fixes:

- Ensure that custom icons are copied into the output bundle
- Solve compatibility problem with some haxies and inputmanager plugins


py2app 0.3.5
------------

py2app 0.3.5 is a minor bugfix release.

Bug fixes:

- Resolve disable_linecache issue
- Fix Info.plist and Python path for plugins


py2app 0.3.4
------------

py2app 0.3.4 is a minor bugfix release.

Bug fixes:

- Fixed a typo in the py2applet script
- Removed some, but not all, compiler warnings from the bundle template
  (which is still probably broken anyway)


py2app 0.3.3
------------

py2app 0.3.3 is a minor bugfix release.

Bug Fixes:

- Fixed a typo in the argv emulation code
- Removed the unnecessary py2app.install hack (setuptools does that already)


py2app 0.3.2
------------

py2app 0.3.2 is a major bugfix release.

Functional changes:

- Massively updated documentation
- New prefer-ppc option
- New recipes: numpy, scipy, matplotlib
- Updated py2applet script to take options, provide --make-setup

Bug Fixes:
