@@ -7,3 +7,5 @@ import pyopengl
 import numpy
 import scipy
 import matplotlib
+
+import virtualenv
